<resources>
    <string name="app_name">TecnologicalImports</string>
    <string name="Botonproductos">Productos</string>
    <string name="Botoncontactenos">Contactenos</string>
    <string name="Botoninformacion">Informacion</string>
    <string name="Botonlogin">Login</string>
    <string name="txt_mail">Correo Electronico</string>
    <string name="txt_password">Contraseña</string>
    <string name="boton">Ingresar</string>
    <string name="item1">Opcion 1</string>
    <string name="item2">Opcion 2</string>
    <string name="item3">Opcion 3</string>

</resources>
